# chat-with-data-behind-dashboards

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: CLAUDE.md  LICENSE  README.md  init_db.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: graph.py  orchestrator.py  types.py  utils.py
backend/app/agents/nodes/: context_processor.py  data_planner.py  dimension_agent.py  enhanced_query_analyzer.py  general_agent.py  insights_generation_agent.py  metric_agent.py  query_analyzer.py  result_formatter.py  sql_execution_agent.py  sql_generation_agent.py  supervisor.py
backend/app/api/v1/routers/: chat_sessions.py  dashboard_contexts.py  datasources.py
backend/app/core/: config.py  database.py
backend/app/models/: chat.py  datasource.py  enhanced_query.py  orm.py
backend/app/services/: datasource_service.py  dbt_service.py  postgres_database_service.py
backend/app/tools/: database_tool.py  dbt_tool.py  sql_execution_tool.py
frontend/: .gitignore  CLAUDE.md  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page-old.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ChatSessionSelector.tsx  DashboardContextList.tsx  DashboardSelector.tsx  DatasetSelection.tsx  DatasourceSetup.tsx
frontend/types/: index.ts
