[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashboard-chat-server"
version = "0.1.0"
description = "A lightweight multi-agent chat server for dashboard conversations"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Dashboard Chat Team" },
]
keywords = ["dashboard", "chat", "ai", "agents", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LangGraph and LangChain
    "langgraph>=0.0.69",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-core>=0.1.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    # HTTP client
    "httpx>=0.25.2",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
dashboard-chat-server = "app.main:start"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "B008"]
